# santral-finansal-risk-paneli

./: .env.example  .gitignore  LICENSE  Makefile  README.md  admin_login.json  admin_santral.json  docker-compose.yml  login.json  user_login.json  ws_login.json
backend/: Cargo.toml
backend/migrations/: 20250625160134_create_initial_tables.up.sql  20250626221453_create_kgup_plans_table.up.sql  20250702143953_create_users_table.up.sql  20250716110000_auth_and_musteri.down.sql  20250716110000_auth_and_musteri.up.sql  20250717113312_create_uretim_olcumleri.up.sql
backend/src/: auth.rs  auth_middleware.rs  auth_mw.rs  broadcast.rs  db.rs  generator.rs  handlers.rs  main.rs  models.rs  ws.rs
docs/: database_schema.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @kurkle.js  @swc.js  chart.js.js  goober.js  jwt-decode.js  next.js  papaparse.js  react-chartjs-2.js  react-hot-toast.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 6b561f9d5aa5912d.webpack.hot-update.json  webpack.1411721bdc583766.hot-update.js  webpack.3ad34ec1f8d0a11f.hot-update.js  webpack.4cb5d7bafc45928e.hot-update.js  webpack.6b561f9d5aa5912d.hot-update.js  webpack.6efc52c99490554f.hot-update.js  webpack.863082a12900bb0e.hot-update.js  webpack.a37b5136d4fc79a9.hot-update.js  webpack.a9476c96bb6bacbe.hot-update.js  webpack.be775cec380fdd11.hot-update.js  webpack.ddea6fbf9e5ed9a4.hot-update.js  webpack.f28442949d14a8fb.hot-update.js  (+1 more)
frontend/src/: vite-env.d.ts
frontend/src/api/: client.ts  santral.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  layout.tsx.bak  page.tsx
frontend/src/components/: AuthUserBar.tsx  CsvUploader.tsx  DengesizlikForm.tsx  HeaderBar.tsx  KgupPlanlamaFormu.tsx  LoginForm.tsx  MapComponent.tsx  RegisterForm.tsx  SantralEkleForm.tsx  SantralListesi.tsx  SonucGrafikleri.tsx  withAuth.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useUretimSocket.ts
frontend/src/lib/: api.ts
frontend/src/services/: adminApiService.ts  authApiService.ts  santralApiService.ts  weatherApiService.ts
frontend/src/types/: auth.ts  santral.ts
(+51 files in other folders)
