[package]
name    = "backend"
version = "0.1.0"
edition = "2024"

# -------------------------------------------------
# RUNTIME & WEB
# -------------------------------------------------
[dependencies]
actix-web  = "4.5"
actix-cors = "0.7"
tokio      = { version = "1.38", features = ["macros", "rt-multi-thread"] }

# -------------------------------------------------
# SERDE / JSON / LOG
# -------------------------------------------------
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
log         = "0.4"
env_logger  = "0.11"
dotenvy     = "0.15"

# -------------------------------------------------
# AUTH / SECURITY
# -------------------------------------------------
argon2         = "0.5"
password-hash  = "0.5"
jsonwebtoken   = "9"
rand           = { version = "0.9", features = ["std_rng"] }

# -------------------------------------------------
# DATA / TIME / NUMERIC
# -------------------------------------------------
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }

# -------------------------------------------------
# DATABASE (sqlx + Postgres)
# -------------------------------------------------
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
    "bigdecimal"
] }
# -------------------------------------------------
# MISC
# -------------------------------------------------
futures = "0.3"
serde_with = "3.14.0"
