[package]
name    = "backend"
version = "0.1.0"
edition = "2024"

# -------------------------------------------------
# RUNTIME & WEB
# -------------------------------------------------
[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15" # .env dosyasını okumak için
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
argon2 = "0.5"
password-hash = "0.5"   # genellikle argon2 ile gelir ama açık eklemek iyi
futures = "0.3"
jsonwebtoken = "9"
anyhow = "1"
actix-web-actors = "4"
actix = "0.13"
urlencoding = "2"
